--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11",
